--- a/library.html
+++ b/library.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-            <title>JK Code | Home</title>
+            <title>JK Code | Library</title>
             <link rel="stylesheet" href="styles.css">
     </head>
     <body>
@@ -16,14 +16,8 @@
             <h1 class="main_title">Jake's Code Workshop</h1>
             <h2 class="subtitle">Somehwere between a dojo and a hangar...</h2>
         </header>
-    <section class="main_section">
-        <p>
-            Welcome to the Workshop! Head to the Lab to try out the latest code (if you dare...) or head over to the Learning Resources area for references for great code resources from around the web.
-        </p>
 
-    </section>
 
 
     </body>
 </html>
-
